feat: Add Slack channel configuration and improve setup UI visibility
- Add param.channel field to alert_actions.conf (default: #security-firewall-alert)
- Completely redesign setup.xml with improved UX:
  * 3 separate blocks: Authentication, Channel, Proxy
  * Korean/English bilingual labels
  * Emoji icons for visual clarity
  * Detailed examples for each field
  * Step-by-step setup guides
  * Unicode section dividers
- Regenerate security_alert.tar.gz (69KB, 52 files)

Resolves: Missing channel parameter in Slack setup
Improves: Setup UI visibility and usability

--- a/security_alert/default/alert_actions.conf
+++ b/security_alert/default/alert_actions.conf
@@ -8,6 +8,7 @@ python.version = python3
 
 param.slack_app_oauth_token =
 param.webhook_url =
+param.channel = #security-firewall-alert
 param.proxy_enabled = 0
 param.proxy_url =
 param.proxy_port =
