--- a/security_alert/default/app.conf
+++ b/security_alert/default/app.conf
@@ -6,6 +6,7 @@ build = 1
 [ui]
 is_visible = 1
 label = Security Alert System
+setup_view = setup.xml
 
 [launcher]
 author = NextTrade Security Team
