Improve alert message formatting in savedsearches.conf
- Clean up UUID values: truncate long identifiers, replace UUIDs with [UUID] placeholder
- Improve before/after change formatting: 'FROM: value ➜ TO: value' format
- Add formatted_message field for cleaner alert output
- Remove raw msg/details fields to prevent messy data in alerts

Affected alerts:
- 001_Config_Change: UUID cleanup, cleaner change summary
- 007_Hardware_Failure/Restored: formatted hardware status messages
- 008_HA_State_Change: clean member IDs, formatted transitions
- 010_Resource_Limit: cleaner resource usage messages

All alerts now send formatted, readable messages instead of raw field values.

--- a/security_alert/default/savedsearches.conf
+++ b/security_alert/default/savedsearches.conf
@@ -34,14 +34,20 @@ search = `fortigate_index` `logids_config_change` \
 | rex field=config_attr "set\s+(?<attr_name>\S+)\s+['\"]?(?<attr_value>[^'\"]+)['\"]?" \
 | eval value_before = coalesce(value_before, "-") \
 | eval value_after = coalesce(value_after, attr_value, config_attr) \
-| eval change_summary = if(value_before != "-", value_before . " → " . value_after, value_after) \
+| eval clean_before = if(len(value_before) > 40, substr(value_before, 1, 37) + "...", value_before) \
+| eval clean_after = if(len(value_after) > 40, substr(value_after, 1, 37) + "...", value_after) \
+| rex mode=sed field=clean_before "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=clean_after "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| eval clean_before = trim(clean_before) \
+| eval clean_after = trim(clean_after) \
+| eval change_summary = if(clean_before != "-", "FROM: " . clean_before . " ➜ TO: " . clean_after, "SET: " . clean_after) \
 | eval criticality = case( \
     like(config_path, "%firewall%policy%") OR like(config_path, "%system%admin%"), "🔴 HIGH", \
     like(config_path, "%vpn%") OR like(config_path, "%router%"), "🟠 MEDIUM", \
     true(), "🟢 LOW") \
 | eval short_path = if(len(config_path) > 50, "..." . substr(config_path, len(config_path)-47, 50), config_path) \
-| eval details = if(len(change_summary) > 100, substr(change_summary, 1, 97) + "...", change_summary) \
-| table _time, device, user, method, change_type, criticality, short_path, value_before, value_after, details
+| eval formatted_message = change_type . " | " . short_path . " | " . change_summary \
+| table _time, device, user, method, formatted_message, criticality
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -84,11 +90,14 @@ search = `fortigate_index` `logids_hardware_failure` \
     component="PSU" OR component="Temperature", "🔴 CRITICAL", \
     component="Fan", "🟠 HIGH", \
     true(), "🟡 MEDIUM") \
-| eval details = coalesce(msg, logdesc, "-") \
+| eval status_info = case( \
+    temp_value != "-", "Temp: " . temp_value . "°C", \
+    threshold != "-", "Usage: " . threshold . "%", \
+    true(), "") \
+| eval formatted_message = component . " " . component_detail . " | Status: FAILED" . if(status_info != "", " | " . status_info, "") \
 | eval current_state = "FAIL" \
-| stats latest(_time) as last_seen, latest(component_detail) as component_detail, latest(temp_value) as temp_value, \
-        latest(threshold) as threshold, latest(severity) as severity, latest(details) as details, \
-        latest(current_state) as current_state \
+| stats latest(_time) as last_seen, latest(formatted_message) as formatted_message, \
+        latest(severity) as severity, latest(current_state) as current_state \
   by device, component \
 | join type=left device component [ \
     | inputlookup hardware_state_tracker \
@@ -97,7 +106,7 @@ search = `fortigate_index` `logids_hardware_failure` \
 | where state_changed=1 \
 | eval state = current_state \
 | outputlookup append=t hardware_state_tracker \
-| table last_seen, device, component, component_detail, temp_value, threshold, severity, details
+| table last_seen, device, formatted_message, severity
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -130,9 +139,9 @@ search = `fortigate_index` (logid=0103040014 OR logid=0103040015) \
     true(), "Hardware") \
 | rex field=msg "(?i)(?<component_detail>fan\s*\d+|psu\s*\d+|sensor\s*\d+)" \
 | eval component_detail = upper(coalesce(component_detail, "-")) \
-| eval details = coalesce(msg, logdesc, "-") \
+| eval formatted_message = component . " " . component_detail . " | Status: RESTORED" \
 | eval current_state = "OK" \
-| stats latest(_time) as last_seen, latest(component_detail) as component_detail, latest(details) as details, \
+| stats latest(_time) as last_seen, latest(formatted_message) as formatted_message, \
         latest(current_state) as current_state \
   by device, component \
 | join type=left device component [ \
@@ -142,7 +151,7 @@ search = `fortigate_index` (logid=0103040014 OR logid=0103040015) \
 | where state_changed=1 \
 | eval state = current_state \
 | outputlookup append=t hardware_state_tracker \
-| table last_seen, device, component, component_detail, details
+| table last_seen, device, formatted_message
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -171,6 +180,9 @@ search = `fortigate_index` `logids_ha_state` \
 | eval from_state = coalesce(from_state, "-") \
 | eval transition = if(from_state != "-", from_state . " → " . ha_state, ha_state) \
 | eval member = coalesce(member, serial, "-") \
+| eval clean_member = if(len(member) > 30, substr(member, 1, 27) + "...", member) \
+| rex mode=sed field=clean_member "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| eval clean_member = trim(clean_member) \
 | eval role = case( \
     like(ha_state, "%master%") OR like(ha_state, "%primary%"), "PRIMARY", \
     like(ha_state, "%slave%") OR like(ha_state, "%secondary%"), "SECONDARY", \
@@ -182,11 +194,11 @@ search = `fortigate_index` `logids_ha_state` \
     true(), "🟢 NORMAL") \
 | rex field=msg "reason:\s*(?<reason>[^,\.]+)" \
 | eval reason = coalesce(reason, "-") \
-| eval details = coalesce(msg, logdesc, "-") \
+| eval clean_reason = if(len(reason) > 50, substr(reason, 1, 47) + "...", reason) \
+| eval formatted_message = role . " | Transition: " . transition . " | Member: " . clean_member . " | Reason: " . clean_reason \
 | eval current_state = ha_state \
-| stats latest(_time) as last_seen, latest(transition) as transition, latest(role) as role, \
-        latest(member) as member, latest(reason) as reason, latest(criticality) as criticality, \
-        latest(details) as details, latest(current_state) as current_state \
+| stats latest(_time) as last_seen, latest(formatted_message) as formatted_message, \
+        latest(criticality) as criticality, latest(current_state) as current_state \
   by device \
 | join type=left device [ \
     | inputlookup ha_state_tracker \
@@ -195,7 +207,7 @@ search = `fortigate_index` `logids_ha_state` \
 | where state_changed=1 \
 | eval state = current_state \
 | outputlookup append=t ha_state_tracker \
-| table last_seen, device, transition, role, member, reason, criticality, details
+| table last_seen, device, formatted_message, criticality
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -239,11 +251,10 @@ search = `fortigate_index` `logids_resource_limit` \
     usage_pct >= 75, "🟡 MEDIUM", \
     true(), "🟢 LOW") \
 | eval remaining = if(isnum(limit_value) AND isnum(current_value), (tonumber(limit_value) - tonumber(current_value)), "-") \
-| eval details = coalesce(msg, "-") \
+| eval formatted_message = resource_type . " | Usage: " . usage . if(remaining != "-", " | Remaining: " . remaining, "") \
 | eval current_state = if(usage_pct >= 75, "EXCEEDED", "NORMAL") \
-| stats latest(_time) as last_seen, latest(usage) as usage, latest(current_value) as current_value, \
-        latest(limit_value) as limit_value, latest(remaining) as remaining, latest(severity) as severity, \
-        latest(details) as details, latest(current_state) as current_state \
+| stats latest(_time) as last_seen, latest(formatted_message) as formatted_message, \
+        latest(severity) as severity, latest(current_state) as current_state \
   by device, resource_type \
 | join type=left device resource_type [ \
     | inputlookup resource_state_tracker \
@@ -253,8 +264,7 @@ search = `fortigate_index` `logids_resource_limit` \
 | eval state = current_state \
 | outputlookup append=t resource_state_tracker \
 | where current_state="EXCEEDED" \
-| eval resource = resource_type \
-| table _time, device, resource, usage, current_value, limit_value, remaining, severity, details
+| table _time, device, formatted_message, severity
 
 cron_schedule = * * * * *
 enableSched = 1
